--- a/LeaveManagementSystem/Web.config
+++ b/LeaveManagementSystem/Web.config
@@ -16,6 +16,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	 <authentication mode="Forms">
+      <forms loginUrl="Account/signin"></forms>
+</authentication>
 	  <sessionState timeout="60"></sessionState>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
