--- a/LeaveManagementSystem.DomainModel/LeaveManagementSystem.DomainModel.csproj
+++ b/LeaveManagementSystem.DomainModel/LeaveManagementSystem.DomainModel.csproj
@@ -57,19 +57,20 @@
     <Compile Include="DomainModel\Experience.cs" />
     <Compile Include="DomainModel\Gender.cs" />
     <Compile Include="DomainModel\LeaveManagementSystemDbcontext.cs" />
+    <Compile Include="DTOClasses\DepartmentWithVirtualHeadDTO.cs" />
     <Compile Include="DTOClasses\EmployeeDTO.cs" />
     <Compile Include="DTOClasses\ProjectManagerDTO.cs" />
-    <Compile Include="Migrations\202011131648242_initial.cs" />
-    <Compile Include="Migrations\202011131648242_initial.designer.cs">
-      <DependentUpon>202011131648242_initial.cs</DependentUpon>
+    <Compile Include="Migrations\202011141021466_initial.cs" />
+    <Compile Include="Migrations\202011141021466_initial.designer.cs">
+      <DependentUpon>202011141021466_initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202011131720574_test.cs" />
-    <Compile Include="Migrations\202011131720574_test.designer.cs">
-      <DependentUpon>202011131720574_test.cs</DependentUpon>
+    <Compile Include="Migrations\202011151636137_removerequired.cs" />
+    <Compile Include="Migrations\202011151636137_removerequired.designer.cs">
+      <DependentUpon>202011151636137_removerequired.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202011131728157_creatorID.cs" />
-    <Compile Include="Migrations\202011131728157_creatorID.designer.cs">
-      <DependentUpon>202011131728157_creatorID.cs</DependentUpon>
+    <Compile Include="Migrations\202011161729226_datetime-nullable.cs" />
+    <Compile Include="Migrations\202011161729226_datetime-nullable.designer.cs">
+      <DependentUpon>202011161729226_datetime-nullable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,14 +83,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202011131648242_initial.resx">
-      <DependentUpon>202011131648242_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011141021466_initial.resx">
+      <DependentUpon>202011141021466_initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202011131720574_test.resx">
-      <DependentUpon>202011131720574_test.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011151636137_removerequired.resx">
+      <DependentUpon>202011151636137_removerequired.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202011131728157_creatorID.resx">
-      <DependentUpon>202011131728157_creatorID.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011161729226_datetime-nullable.resx">
+      <DependentUpon>202011161729226_datetime-nullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
