--- a/LeaveManagementSystem/LeaveManagementSystem.csproj
+++ b/LeaveManagementSystem/LeaveManagementSystem.csproj
@@ -262,6 +262,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmtpHelper\SendEmail.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -295,6 +296,7 @@
     <Content Include="Views\Leave\LeaveStatus.cshtml" />
     <Content Include="Views\Account\Unauthorized.cshtml" />
     <Content Include="Views\Shared\_EmployeePartialView.cshtml" />
+    <Content Include="Views\Designation\ListDesignation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
