--- a/LeaveManagementSystem.DomainModel/LeaveManagementSystem.DomainModel.csproj
+++ b/LeaveManagementSystem.DomainModel/LeaveManagementSystem.DomainModel.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\202011161729226_datetime-nullable.designer.cs">
       <DependentUpon>202011161729226_datetime-nullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011190421512_changedate.cs" />
+    <Compile Include="Migrations\202011190421512_changedate.designer.cs">
+      <DependentUpon>202011190421512_changedate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DomainModel\Qualification.cs" />
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011161729226_datetime-nullable.resx">
       <DependentUpon>202011161729226_datetime-nullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011190421512_changedate.resx">
+      <DependentUpon>202011190421512_changedate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
