--- a/LeaveManagementSystem/LeaveManagementSystem.csproj
+++ b/LeaveManagementSystem/LeaveManagementSystem.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\LeaveController.cs" />
     <Compile Include="Controllers\RemoteValidationController.cs" />
+    <Compile Include="Controllers\UnAuthorizedController.cs" />
     <Compile Include="CustomAuthorizationFilter\CustomAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -294,7 +295,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Leave\LeaveStatus.cshtml" />
-    <Content Include="Views\Account\Unauthorized.cshtml" />
+    <Content Include="Views\UnAuthorized\Unauthorized.cshtml" />
     <Content Include="Views\Shared\_EmployeePartialView.cshtml" />
     <Content Include="Views\Designation\ListDesignation.cshtml" />
     <None Include="Web.Debug.config">
