--- a/LeaveManagementSystem/Web.config
+++ b/LeaveManagementSystem/Web.config
@@ -14,6 +14,11 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="SmtpHost" value="smtp.gmail.com"/>
+	  <add key="EnableSsl" value="true"/>
+	  <add key="Port" value="587"/>
+	  <add key="FromAddress" value="forapptestpurpose@gmail.com"/>
+	  <add key="Password" value="hpqtvsbcapmtktea"/>
   </appSettings>
   <system.web>
 	 <authentication mode="Forms">
@@ -84,4 +89,6 @@
 	<connectionStrings>
 		<add name="LeaveManagementSystemConnectionString" connectionString="data source=DESKTOP-S6RNUHC ; integrated security = true; initial catalog=LeaveManagementSystem" providerName="System.Data.sqlClient" />
 	</connectionStrings>
+
+	
 </configuration>
