--- a/LeaveManagementSystem/LeaveManagementSystem.csproj
+++ b/LeaveManagementSystem/LeaveManagementSystem.csproj
@@ -263,7 +263,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SmtpHelper\SendEmail.cs" />
+    <Compile Include="Helper\SmtpHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
